--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "call-api",
+  "name": "rick-morty-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.35.7",
+    "@tanstack/react-query": "^5.0.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^4.36.0",
-    "@tanstack/react-query-devtools": "^4.35.7",
+    "@tanstack/eslint-plugin-query": "^5.0.0",
+    "@tanstack/react-query-devtools": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
